--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 </head>
 <body>
     <div class="header" id="header">
+        <button onclick="toggleSidebar()" class="btn_icon_header">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="35" fill="currentColor" class="bi bi-list"
+                viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+            </svg>
+        </button>
         <div class="logo_header">
             <img src="imagens/logo.png" alt="Logo do site">
         </div>
         <div class="navigation_header">
+            <button onclick="toggleSidebar()" class="btn_icon_header">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <path
+                        d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                </svg>
+            </button>
+
             <a href="home.html" target="tela" class="active"><img src="imagens/logo-home.jpg" alt="Logo Home"></a>
             <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Logo Facebook"></a>
             <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram Logo"></a>
@@ -22,8 +36,9 @@
             <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a>
         </div>
     </div>
-    <div class="content">
+    <div class="content" id="content">
         <img src="imagens/frame-iphone.png" alt="Frame-iphone">
     </div>
 </body>
+<script src="script/script.js"></script>
 </html>
