--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Logo Twitter"></a>
         </div>
     </div>
-    <div class="content" id="content">
+    <div tabindex="0" onclick="closeSidebar()" class="content" id="content">
         <img src="imagens/frame-iphone.png" alt="Frame-iphone">
     </div>
 </body>
