--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo_header">
             <img src="imagens/logo.png" alt="Logo do site">
         </div>
-        <div class="navigation_header">
+        <div class="navigation_header" id="navigation_header">
             <button onclick="toggleSidebar()" class="btn_icon_header">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                     <path
