--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <div tabindex="0" onclick="closeSidebar()" class="content" id="content">
         <img src="imagens/frame-iphone.png" alt="Frame-iphone">
     </div>
+    <footer>Site criado por Michel Machado para o curso de HTML e CSS do CursoemVideo.</footer>
 </body>
 <script src="script/script.js"></script>
 </html>
