--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube-michel.jpg" alt="Youtube">
+    <img src="imagens/tela-youtube-m.jpg" alt="Youtube">
     <a href="https://www.youtube.com/@Mr2710michel/playlists" target="_blank">ACESSAR</a>
 </body>
 </html>
