--- a/facebook.html
+++ b/facebook.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook-michel.jpg" alt="Facebook">
+    <img src="imagens/tela-facebook-m.jpg" alt="Facebook">
     <a href="https://www.facebook.com/MichelReis.M" target="_blank">ACESSAR</a>
 </body>
 </html>
