--- a/github.html
+++ b/github.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github-michel.jpg" alt="GitHub">
+    <img src="imagens/tela-github-m.jpg" alt="GitHub">
     <a href="https://github.com/Machado-Michel" target="_blank">ACESSAR</a>
 </body>
 </html>
