--- a/twitter.html
+++ b/twitter.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-twitter-michel.jpg" alt="Twitter">
+    <img src="imagens/tela-twitter-m.jpg" alt="Twitter">
     <a href="https://twitter.com/MichelM06261626" target="_blank">ACESSAR</a>
 </body>
 </html>
